--- a/Works/Foodfy/public/styles/index.css
+++ b/Works/Foodfy/public/styles/index.css
@@ -1,5 +1,3 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap';
-
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +6,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 .invisible {
@@ -41,7 +40,6 @@ header div.header-content {
 }
 
 header img {
-    margin-right: 32px;
     cursor: pointer;
 }
 
@@ -57,17 +55,21 @@ header img {
 
 .menu-user a {
     color: black;
+    text-transform: uppercase;
 }
 
 .menu-admin a {
     color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .menu-user a:hover {
     border-bottom: 2px solid black;
 }
 
-.menu.menu-admin a:hover {
+.menu-admin a:hover {
     border-bottom: 2px solid white;
 }
 
@@ -321,10 +323,19 @@ footer p {
     background-color: #6558C3;
     border-radius: 4px;
     cursor: pointer;
+
+    width: 140px;
+    text-align: center;
+    
+    box-sizing: border-box;
 }
 
 .button.delete {
     background-color: rgb(224, 82, 82);
+}
+
+.button.cancel {
+    background-color: #8A8A8A;
 }
 
 .admin-cards {
