--- a/Works/Foodfy/src/app/views/layout.njk
+++ b/Works/Foodfy/src/app/views/layout.njk
@@ -4,38 +4,16 @@
         {% block head %}
             <title>Foodfy</title>
         {% endblock %}
-        <link rel="stylesheet" href="/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+        {% include 'parts/styles.njk' %}
     </head>
 
     <body>
+        {% include 'parts/messages.njk' %}
+        
         <div id="page-container">
             <div id="content-wrap">
-                <header>
-                    <div class="header-content">
-                        <a href="/">
-                            <img src="/assets/logo_black.png" alt="logo_foodfy">
-                        </a>  
-                        
-                        <div class="menu menu-user">
-                            <a href="/about">Sobre</a>
-                            <a href="/recipeslist">Receitas</a>
-                            <a href="/chefslist">Chefs</a>
-                        </div>
-
-                        <div class="menu menu-admin">
-                            <a href="/admin/recipes">Receitas</a>
-                            <a href="/admin/chefs">Chefs</a>
-                        </div>
-
-                        <div class="div-form menu-user">
-                            <form action="/recipeslist" method="GET">
-                                <input type="text" name="filter" placeholder="Buscar uma receita" value={{ filter }}>
-                                <button class="button" type="submit">Buscar</button>
-                            </form>
-                        </div>
-                    </div>
-                </header>
+                {% include 'parts/header.njk' %}
                 
                 <div class="body">
                     {% block content %}
@@ -43,9 +21,7 @@
                 </div>
             </div>
 
-            <footer>
-                <p>Todos direitos reservados, receitas Foodfy.</p>
-            </footer>
+            {% include 'parts/footer.njk' %}
         </div>
 
         <script src="/script.js"></script>
